@@ -1,3 +1,12 @@
+2000-08-02  Yuuichi Teranishi  <teranisi@quickhack.net>
+
+	* emacs/mhc-cmail.el (toplevel): Set draft related backends for SEMI.
+
+2000-08-02  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* emacs/mhc-cmail.el (mhc-cmail-mime-get-raw-buffer): Implemented.
+	(mhc-cmail-summary-display-article): Set page number.
+
 2000-08-02  Hideyuki SHIRAI  <shirai@quickhack.net>
 
 	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix problem,
